Inserimento container e Background-image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>AirBnB</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="container">
+    <!-- New York -->
+    <div id="NewYork" class="container">
+    
+    </div>
+    <!-- Shanghai -->
+    <div id="Shanghai" class="container">
+
+    </div>
+    <!-- London -->
+    <div id="London" class="container">
 
     </div>
   </body>
