Add cityName + layer

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   <body>
     <!-- New York -->
     <div id="NewYork" class="container">
-    
+      <div class="layer"></div>
+      <span class="cityName">New York</span>
     </div>
     <!-- Shanghai -->
     <div id="Shanghai" class="container">
-
+      <div class="layer"></div>
+      <span class="cityName">Shanghai</span>
     </div>
     <!-- London -->
     <div id="London" class="container">
-
+      <div class="layer"></div>
+      <span class="cityName">London</span>
     </div>
   </body>
 </html>
