Add bonus(button+gradient background)

--- a/bonus-airbnb/index.html
+++ b/bonus-airbnb/index.html
@@ -11,16 +11,19 @@
     <div id="NewYork" class="container">
       <div class="layer"></div>
       <span class="cityName">New York <br>
+      <button type="button" name="button" class="gradient-button-1">BOOK NOW</button></span>
     </div>
     <!-- Shanghai -->
     <div id="Shanghai" class="container">
       <div class="layer"></div>
-      <span class="cityName">Shanghai</span>
+      <span class="cityName">Shanghai <br>
+      <button type="button" name="button" class="gradient-button-1">BOOK NOW</button></span>
     </div>
     <!-- London -->
     <div id="London" class="container">
       <div class="layer"></div>
-      <span class="cityName">London</span>
+      <span class="cityName">London <br>
+      <button type="button" name="button" class="gradient-button-1">BOOK NOW</button></span>
     </div>
   </body>
 </html>
